--- a/ClientApp/src/components/Mesas.css
+++ b/ClientApp/src/components/Mesas.css
@@ -1,42 +1,90 @@
 .container {
-  background-color: #eff7ef;
+  font-family: Arial, sans-serif;
+  margin-bottom: 1em;
+  background-color: #ffffff;
+  border-radius: 10px;
 }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  background-color: #d6e7ce;
-  border-radius: 150px;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.card-body {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5em;
   text-align: center;
-  font-family: "Montserrat", sans-serif;
-  color: #000;
+  margin-top: 0.5em;
 }
 
-.card-title {
-  font-size: 1.5em;
+.header h1 {
+  margin: 0 auto;
+  font-size: 2em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000;
   font-weight: bold;
 }
 
-.card-text {
-  font-size: 1.2em;
-  margin-top: 1em;
-}
-
-.btn {
-  background-color: #8ccf9c;
-  border-color: #8ccf9c;
-  color: #ffffff;
-}
-
-.btn:hover {
+.mesa-card {
+  margin: 0.2em;
+  transition: 0.3s;
+  box-shadow: 0 0.5em 1em -0.125em rgba(108, 68, 162, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
   background-color: #ffffff;
-  border-color: #8ccf9c;
-  color: #8ccf9c;
+}
+
+.mesa-card:hover {
+  color: #5a5a5a;
+  box-shadow: 0 2px 4px rgba(140, 207, 156, 0.15);
+  transition: 0.3s;
+  transform: scale(1.02);
+}
+
+.mesa-header {
+  background-color: #eff9ef;
+  padding: 1em;
+  font-size: 1.25em;
+  font-weight: 500;
+}
+
+.mesa-libre {
+  background-color: #eff7ef;
+  color: #3c763d;
+  border: 1px solid #3c763d;
+}
+
+.mesa-reservada {
+  background-color: #d6e7ce;
+  color: #8a6d3b;
+  border: 1px solid #8a6d3b;
+}
+
+.mesa-ocupada {
+  background-color: #ffffff;
+  color: #a94442;
+  border: 1px solid #a94442;
+}
+
+.mesa-body {
+  padding: 1em;
+  text-align: center;
+}
+
+.sidebar {
+  font-size: 1.25em;
+  background-color: #eff7ef;
+}
+
+.sidebar button {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  background-color: #8ccf9c;
+  color: #000;
+  border: none;
+  height: 60px;
+  border-radius: 10px;
+  transition: background-color .3s ease;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.sidebar button:hover {
+  background-color: #71b885;
 }
